Made changes to larger screens and fixed the issue of the content part of the page not filling the entire screen or overflowing when there's little content on the screen. Also added package.json.

--- a/public/styles.css
+++ b/public/styles.css
@@ -794,8 +794,14 @@ header>svg{
   }
 
   #editpopup {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media screen and (min-width:  2400px){
+  #main, #header{
+    padding-inline: 20vw;
   }
 }
 
@@ -890,6 +896,13 @@ header>svg{
   background-color: rgb(44 102 110 / var(--tw-bg-opacity));
 }
 
+@media (min-width: 2400px) {
+  .undone-todos {
+    padding-left: 2.25rem;
+    padding-right: 2.25rem;
+  }
+}
+
 .todos-div {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -910,6 +923,12 @@ header>svg{
 @media (min-width: 1280px) {
   .todos-div {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1824px) {
+  .todos-div {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
@@ -946,6 +965,28 @@ header>svg{
   }
 }
 
+@media (min-width: 1824px) {
+  .undone-todos>div {
+    right: 0px;
+  }
+
+  .undone-todos>div {
+    top: 0px;
+  }
+
+  .undone-todos>div {
+    width: 2.5rem;
+  }
+
+  .undone-todos>div {
+    flex-direction: column;
+  }
+
+  .undone-todos>div {
+    justify-content: center;
+  }
+}
+
 .done-todos>div {
   margin: auto;
   display: flex;
@@ -974,6 +1015,17 @@ header>svg{
 
   .check-box {
     z-index: 3;
+  }
+}
+
+@media (min-width: 1824px) {
+  .check-box {
+    left: 50%;
+  }
+
+  .check-box {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
 
@@ -1030,8 +1082,8 @@ header>svg{
 
 @media (min-width: 1280px) {
   .todos-text {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
@@ -1048,6 +1100,12 @@ header>svg{
   }
 }
 
+@media (min-width: 1824px) {
+  .pencil-icon {
+    margin-bottom: 1rem;
+  }
+}
+
 .delete {
   cursor: pointer;
   font-size: 1.5rem;
@@ -1058,6 +1116,12 @@ header>svg{
   .delete {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1824px) {
+  .delete {
+    margin-top: 1rem;
   }
 }
 
@@ -1085,6 +1149,13 @@ ion-icon {
 }
 
 @media (min-width: 1536px) {
+  ion-icon {
+    font-size: 1.875rem !important;
+    line-height: 2.25rem !important;
+  }
+}
+
+@media (min-width: 1824px) {
   ion-icon {
     font-size: 2.25rem !important;
     line-height: 2.5rem !important;
@@ -1182,24 +1253,8 @@ ion-icon {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-5 {
-    height: 1.25rem;
-  }
-
-  .lg\:w-12 {
-    width: 3rem;
-  }
-
-  .lg\:w-5 {
-    width: 1.25rem;
-  }
-
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:rounded-xl {
-    border-radius: 0.75rem;
   }
 
   .lg\:px-20 {
@@ -1218,6 +1273,26 @@ ion-icon {
     height: 6rem;
   }
 
+  .xl\:h-\[1\.125rem\] {
+    height: 1.125rem;
+  }
+
+  .xl\:w-11 {
+    width: 2.75rem;
+  }
+
+  .xl\:w-\[1\.125rem\] {
+    width: 1.125rem;
+  }
+
+  .xl\:rounded-xl {
+    border-radius: 0.75rem;
+  }
+
+  .xl\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1233,13 +1308,29 @@ ion-icon {
     right: 6rem;
   }
 
+  .\32xl\:h-5 {
+    height: 1.25rem;
+  }
+
+  .\32xl\:w-12 {
+    width: 3rem;
+  }
+
+  .\32xl\:w-5 {
+    width: 1.25rem;
+  }
+
+  .\32xl\:rounded-xl {
+    border-radius: 0.75rem;
+  }
+
   .\32xl\:p-9 {
     padding: 2.25rem;
   }
 
-  .\32xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
